--- a/lib/views/dashboard.haml
+++ b/lib/views/dashboard.haml
@@ -1,4 +1,6 @@
 %link(rel="stylesheet" type="text/css" href="/styles/hcard.css")
+%a{:href => "/logout"}
+  logout
 %div
   %h3
     %img{:src => @organization.logo_url}
